  - Added the -X flag to sip to extract text defined with %Extract.
  - Deprecated the -d flag to sip, use -X instead.
  - Added /PyInt/ as an argument and function annotation to force char types to
    be handled as Python integers rather that single character strings.
  - Added the L and M format characters to sipBuildResult(), sipCallMethod()
    and sipParseResult().
  - Added the -T flag to sip to suppress the timestamp in the header comments
    of generated files.
  - sip.voidptr now behaves like a Python memoryview object and supports
    sub-script assignment.
  - Added the --sip-module flag to configure.py to allow the name and
    containing package of the sip module to be specified thereby allowing
    packages to include a local copy of the sip module.

v4.11.2 22nd October 2010
  - /KeepReference/ can now be applied to global functions and static methods.
  - %TypeCode can now be specified in a %MappedType directive.
  - Mapped types for templates no longer require the template arguments to be
    fully defined.
  - Build system changes required by PyQt v4.8 and Qt v4.7.

v4.11.1 6th September 2010
  - A bug fix release.

v4.11 31st August 2010
  - Added the %UnitPostIncludeCode directive.
  - /KeepReference/ will now accept a key to track when the same object is
    passed to more than one method.
  - operator() and __call__() can now accept keyword arguments.
  - Added support for Python v3.2.

v4.10.5 16th July 2010
  - A bug fix release for Python v3 and Python v2.7.

v4.10.4 15th July 2010
  - Use capsules when being built for Python v2.7 to work around an apparent
    bug in the support for PyCObject.

v4.10.3 12th July 2010
  - Added support for Q_SLOT, Q_SLOTS, Q_SIGNAL and Q_SIGNALS.
  - Added the /__len__/ function annotation.

v4.10.2 16th April 2010
  - A bug fix release.

v4.10.1 17th March 2010
  - Added the /NoCopy/ function and argument annotations.

v4.10 14th January 2010
  - Added the sip.voidptr.ascapsule() method.